--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,34 +6,21 @@
       <h3>
       Reading List
       </h3>
-      <!-- Standard button -->
-      <button type="button" class="btn btn-default">Default</button>
-
-      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-primary">Primary</button>
-
-      <!-- Indicates a successful or positive action -->
-      <button type="button" class="btn btn-success">Success</button>
-
-      <!-- Contextual button for informational alert messages -->
-      <button type="button" class="btn btn-info">Info</button>
-
-      <!-- Indicates caution should be taken with this action -->
-      <button type="button" class="btn btn-warning">Warning</button>
-
-      <!-- Indicates a dangerous or potentially negative action -->
-      <button type="button" class="btn btn-danger">Danger</button>
-
-      <!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
-      <button type="button" class="btn btn-link">Link</button>
+     
       <ol class="breadcrumb">
         <li class ="active">Home</li>
       </ol>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-xs-4">
 
         </div>
+      </div> -->
+
+      <div class="col-xs-4">
+       <form>
+        <input type = 'text' class = 'form-control' value= '<%= params[:keyword]%>' name = 'keyword' placeholder = 'keyword'>
+      </form>
       </div>
 
 
