--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -40,7 +40,7 @@
                 </h4>
                  <br>
                 <p>
-                    <%= book.auther %>
+                    <%= book.author %>
                 </p>
                 <br>
                 <p>
@@ -76,7 +76,7 @@
     <% @books.each do |book| %>
       <tr class = <%= "finished" if book.finished? %> >
         <td><%= book.title %></td>
-        <td><%= book.auther %></td>
+        <td><%= book.author %></td>
         <td><%= book.description %></td>
         <!-- <td><%= book.amazon_id %></td> -->
         <td><%= image_from_amazon(book.amazon_id) %></td>
