--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="container">
-  <div class="row">
+  
     <div class="col-md-12">
       <h3>
       Reading List
@@ -10,45 +10,55 @@
       <ol class="breadcrumb">
         <li class ="active">Home</li>
       </ol>
-
+    
       <!-- <div class="row">
         <div class="col-xs-4">
 
         </div>
       </div> -->
 
-      <div class="col-xs-4">
+      <div class="col-md-12">
        <form>
+        <legend>Search Books</legend>
+        <div class="col-md-4">
         <input type = 'text' class = 'form-control' value= '<%= params[:keyword]%>' name = 'keyword' placeholder = 'keyword'>
+        <p></p>
+        </div>
       </form>
       </div>
-
+    </div>
       <br>
-      <div class="clearfix"></div>
+      <br>
+      <br>
+      <br>
+      <br>
+    
+      
+    <div class="clearfix">
 
 
 
-      <div class="row">
+    
         <% @books.each do |book| %>
 
         <div class="col-md-8">
         
           <div class="row">
             <ul>
-                
-
             <div class="col-md-4">
               <%= image_from_amazon(book.amazon_id) %>
             </div>
             <div class="col-md-8">
-                <h4>
+                <h3 class = "text-info">
                    <%= book.title %>
-                </h4>
+                </h3>
                  <br>
-                <p>
-                    <%= book.author %>
-                </p>
+                <em class ="text-muted">
+                    written by <%= book.author %>
+                </em>
                 <br>
+                 <br>
+
                 <p>
                     <%= book.description %>
                 </p>
@@ -64,38 +74,7 @@
 
         <% end %>
       </div>
+      </div>
     </div>
-  </div>
 </div>
 
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Auther</th>
-      <th>Description</th>
-      <th>Amazon</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-      <tr class = <%= "finished" if book.finished? %> >
-        <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= book.description %></td>
-        <!-- <td><%= book.amazon_id %></td> -->
-        <td><%= image_from_amazon(book.amazon_id) %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Book', new_book_path %>
