--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="container">
   
     <div class="col-md-12">
@@ -20,75 +18,102 @@
       <div class="col-md-12">
        <form>
         <legend>Search Books</legend>
-        <div class="col-md-4">
+        <div class="col-md-4"> 
         <input type = 'text' class = 'form-control' value= '<%= params[:keyword]%>' name = 'keyword' placeholder = 'keyword'>
-        <p></p>
+       
         </div>
+        <p class = 'pull-right'>
+          <a href="#">
+            <button type="button" class="btn btn-primary">Default</button>
+          </a>
+        </p>
       </form>
-
-
 
       </div>
     </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    
+
+    <div class="col-md-5">
+      <!-- <form class="form-horizontal"> -->
+         <%= form_for(Book.new, remote: true, html: { class: 'horizontal-form'}) do |f| %>
+        <%#= form_for(Book.new, remote: true, html: { class: 'horizontal-form' }) do |f| %>
+      <legend>New Book</legend>
+   <div class="form-group">
+    <label class="col-sm-2 control-label">Genre</label>
+    <div class="col-sm-10">
+      <!-- <input type="email" class="form-control" id="inputEmail3" placeholder="Email"> -->
+      <%= f.select :genres, @genres.map {|g| [g.name, g.id]},{},{multiple: true} %>
+
+      <%#= f.collection_select(:genres, Genre.all, :id, :name, ) %>
       
-    <div class="clearfix">
+      <%#= select("post", "person_id", Genre.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'},{multiple: true}) %>
+
+    </div> 
+  </div>
+  <div class="form-group">
+    <!-- <label for="inputPassword3" class="col-sm-2 control-label">Password</label> -->
+    <%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
+  </div>
+
+  <div class="form-group">
+   <%= f.text_field :author, class: 'form-control', placeholder: 'Author' %>
+  </div>
+
+  <div class="form-group">
+   <%= f.text_field :description, class: 'form-control', placeholder: 'Description' %>
+  </div>
 
 
-  <div class="col-md-12">
-      
-        
+  <div class="form-group">
+   <%= f.text_field :amazon_id, class: 'form-control', placeholder: 'Amazon_id' %>
+  </div>
 
-        <div class="col-md-8">
-        <% @books.each do |book| %>
-          <div class="row">
-           
-            <div class="col-md-4">
-              <%= image_from_amazon(book.amazon_id) %>
-            </div>
-            <div class="col-md-8">
-                <h3 class = "text-info">
-                   <%= book.title %>
-                </h3>
-                 <br>
-                <em class ="text-muted">
-                    written by <%= book.author %>
-                </em>
-                <br>
-                 <br>
-
-                <p>
-                    <%= book.description %>
-                </p>
-                
-                 
-                <% book.genres.each do |genres| %> 
-                    <span class="label label-primary">
-                     <%= genres.name %> 
-                    </span>
-                    &nbsp
-                <% end %>
-              </div>
-         
-          
-          
-           </div>
-        
-        <% end %>
+   <div class="form-group">
+   <legend> Rating </legend>
+   <% (1..5).each do |rating| %>
+   <%# (1..5).each do |rating| %>
+   <%= rating %>
+   <label for="" class="radio-inline">
+   <%= f.radio_button :rating, rating %>
+    </label>
+    <% end %>
+  
+  </div>
+<%#= radio_button_tag(:title, "child") %>
+    <div class='form-group'>
+          <legend>Rating</legend>
+          <% (1..5).each do |rating| %>
+            <label class='radio-inline'>
+              <%= rating %> <!--1,2,3,4,5 -->
+              <!-- value 1,2,3,4,5 -->
+              <%= f.radio_button :rating, rating %>
+            </label>
+          <% end %>
         </div>
+
+
+
+ <div class='form-group'>
+          <%= f.submit class: 'btn btn-primary' %>
+        </div>
+<% end %>
+    </div>
+
+
+
+
+      <br><br><br><br><br>
+
+    <div class="clearfix">
+   <div class="col-md-12">
+    <div class="col-md-8">
+    <%= render @books %>
+    </div>
           <div class="col-md-4">
               <h3>Genre (Click to filter books)</h3>
               <br>
              <li>
              <span class = 'label label-danger'>
-            
               <%= link_to "No filter" ,books_path, style: 'color:#FFFFFD' %>
-
              </span>
              <br>
              <br>
@@ -97,22 +122,13 @@
               <% @genres.each do |genres| %>
               <li>
                 <span class = 'label label-primary'  style="color:#FFFFFD">
-                  <%#= genres.name %>
-                  <%#= link_to genres.name, books_path(filter: genres.id), class : 'label label-primary' %>
                   <%= link_to genres.name ,books_path(filter: genres.name),style: 'color:#FFFFFD' %>
-
                 </span>
-
               </li>
               <br>
-              
               <% end %>
-
-
           </div>
         </div>
-
-
 <!-- clearfix -->
  </div>
         
