--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :auther %><br>
-    <%= f.text_field :auther %>
+    <%= f.label :author %><br>
+    <%= f.text_field :author %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
