add create.js, book created show at top

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -78,7 +78,7 @@
      
     <div class="clearfix">
    <div class="col-md-12">
-    <div class="col-md-8">
+    <div class="col-md-8 book-list">
     <%= render @books %>
     </div>
           <div class="col-md-4">
