--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,13 +9,13 @@
       <div class="col-md-12">
        <form>
         <legend>Search Books</legend>
-        <div class="col-md-4"> 
+        <div class="col-md-4">
         <input type = 'text' class = 'form-control' value= '<%= params[:keyword]%>' name = 'keyword' placeholder = 'keyword'>
-       
+
         </div>
         <p class = 'pull-right'>
           <a href="#">
-            <button type="button" id ='show-form' class="btn btn-primary">Default</button>
+            <button type="button" id ='show-form' class="btn btn-primary">New Book</button>
           </a>
         </p>
       </form>
@@ -36,8 +36,8 @@
       <!-- <input type="email" class="form-control" id="inputEmail3" placeholder="Email"> -->
       <%#= f.select :genres, @genres.map {|g| [g.name, g.id]},{},{multiple: true} %>
        <%= f.select :genre_ids, @genres.map {|g| [g.name, g.id]},{},{multiple: true} %>
-  
-    </div> 
+
+    </div>
   </div>
   <div class="form-group">
     <!-- <label for="inputPassword3" class="col-sm-2 control-label">Password</label> -->
@@ -66,7 +66,7 @@
    <%= f.radio_button :rating, rating %>
     </label>
     <% end %>
-  
+
   </div>
  <div class='form-group'>
           <%= f.submit class: 'btn btn-primary' %>
@@ -74,8 +74,8 @@
 <% end %>
     </div>
     </div>
-      
-     
+
+
     <div class="clearfix">
    <div class="col-md-12">
     <div class="col-md-8 book-list">
@@ -103,8 +103,5 @@
           </div>
         </div>
 <!-- clearfix -->
- </div> 
+ </div>
       </div>
-      
-
-
